--- a/Applications/FileShare/CMakeLists.txt
+++ b/Applications/FileShare/CMakeLists.txt
@@ -4,10 +4,10 @@ project (FileShare)
 #
 add_executable(FileShare 
 	./Source/main.cpp
+	$<TARGET_OBJECTS:SpaceKernel>
+	$<TARGET_OBJECTS:ShareInterface>
 )
 # 
 target_link_libraries(FileShare 
 PRIVATE
-	ShareInterface
-	SpaceKernel
 )
