--- a/Share/SConnectors/SDecoded/SStream/CMakeLists.txt
+++ b/Share/SConnectors/SDecoded/SStream/CMakeLists.txt
@@ -4,13 +4,10 @@ add_subdirectory(SKernel)
 # ---------------------------------------------------------
 # ShareConnectorDecodedStream target
 # ---------------------------------------------------------
-add_library(ShareConnectorDecodedStream
-INTERFACE
-)
-# dependencies
-target_link_libraries(ShareConnectorDecodedStream
-INTERFACE 
-	SpaceKernel
+create_interface(
+TARGET	
+	ShareConnectorDecodedStream	 
+LINKS
 	ShareConnectorDecodedStreamKernel
 )
 # ---------------------------------------------------------
