--- a/Share/SConnectors/SEncoded/SMessage/CMakeLists.txt
+++ b/Share/SConnectors/SEncoded/SMessage/CMakeLists.txt
@@ -4,12 +4,10 @@ add_subdirectory(SKernel)
 # ---------------------------------------------------------
 # ShareConnectorEncodedMessage target
 # ---------------------------------------------------------
-add_library(ShareConnectorEncodedMessage
-INTERFACE
-)
-# dependencies
-target_link_libraries(ShareConnectorEncodedMessage
-INTERFACE 
+create_container(
+TARGET	
+	ShareConnectorEncodedMessage	 
+PUBLIC_LINKS
 	ShareConnectorEncodedMessageKernel
 )
 # ---------------------------------------------------------
