--- a/Share/SModules/CMakeLists.txt
+++ b/Share/SModules/CMakeLists.txt
@@ -2,17 +2,12 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # ShareModule target
 # ---------------------------------------------------------
-add_library(ShareModule INTERFACE
-	#MTransform.cpp
-	#MSpliter.cpp
-)
-# includes
-target_include_directories(ShareModule INTERFACE
-	.
-)
-# target dependencies
-target_link_libraries(ShareModule 
-INTERFACE 
+create_container(
+TARGET	
+	ShareModule 
+PUBLIC_INCLUDES
+	${CMAKE_CURRENT_LIST_DIR}
+PUBLIC_LINKS
 	ShareConnector
 	ShareFunction
 	ShareKernel
