--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -6,11 +6,17 @@ include(GoogleTest.cmake)
 function(add_gtests)
     set(options)
     set(oneValue   TARGET)
-    set(multiValue INCLUDES SOURCES DEPENDS)
+    set(multiValue INCLUDES SOURCES DEPENDS CONTAINERS)
     cmake_parse_arguments(ARG "${options}" "${oneValue}" "${multiValue}" ${ARGN} )
     add_executable (
-        ${ARG_TARGET} ${ARG_SOURCES}
+        ${ARG_TARGET} 
+        ${ARG_SOURCES}
+        
     )
+    foreach(C ${ARG_CONTAINERS})
+        target_sources(${ARG_TARGET} PUBLIC $<TARGET_OBJECTS:${C}>)
+        message(STATUS "--------------------------------C=${C}")
+    endforeach()
     target_include_directories(
         ${ARG_TARGET}
     PRIVATE
