--- a/Space/SHelpers/CMakeLists.txt
+++ b/Space/SHelpers/CMakeLists.txt
@@ -1,20 +1,16 @@
 cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
-# SpaceHelper target
+# SpaceHelper container
 # ---------------------------------------------------------
-add_library(SpaceHelper 
-STATIC
+create_container(
+TARGET	
+	SpaceHelper 
+SOURCES
 	SBase64.cpp
 	SHash.cpp
-)
-# includes
-target_include_directories(SpaceHelper 
-PUBLIC
-	.
-)
-# target dependencies
-target_link_libraries(SpaceHelper 
-PUBLIC 
+PUBLIC_INCLUDES
+	${CMAKE_CURRENT_LIST_DIR}
+PUBLIC_LINKS
 	SpaceKernel
 	SpaceResource
 )
