--- a/Space/SKernel/SLinux/SKernel/CMakeLists.txt
+++ b/Space/SKernel/SLinux/SKernel/CMakeLists.txt
@@ -2,19 +2,15 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # SpaceKernelLinux target
 # ---------------------------------------------------------
-add_library(SpaceKernelLinux STATIC
+add_library(SpaceKernelLinux OBJECT
 	SMonitorHandler.cpp
 )
 # includes
 target_include_directories(SpaceKernelLinux 
 PUBLIC
-	.
-)
-#dependencies
-target_link_libraries(SpaceKernelLinux
-PUBLIC 
-	pthread
-	SpaceKernel
+	${CMAKE_CURRENT_LIST_DIR}
+PRIVATE
+	$<TARGET_PROPERTY:SpaceKernel,INTERFACE_INCLUDE_DIRECTORIES>
 )
 # ---------------------------------------------------------
 # end 
