--- a/Space/SMonitors/CMakeLists.txt
+++ b/Space/SMonitors/CMakeLists.txt
@@ -2,17 +2,12 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # SpaceMonitor target
 # ---------------------------------------------------------
-add_library(SpaceMonitor 
-INTERFACE
-)
-# includes
-target_include_directories(SpaceMonitor 
-INTERFACE
-	.
-)
-# dependencies
-target_link_libraries(SpaceMonitor 
-INTERFACE 
+create_container(
+TARGET	
+	SpaceMonitor 
+PUBLIC_INCLUDES
+	${CMAKE_CURRENT_LIST_DIR}
+PUBLIC_LINKS
 	SpaceKernel
 )
 # ---------------------------------------------------------
