--- a/Space/SResources/CMakeLists.txt
+++ b/Space/SResources/CMakeLists.txt
@@ -9,7 +9,7 @@ endif()
 # ---------------------------------------------------------
 # SpaceResource container
 # ---------------------------------------------------------
-create_container(
+create_package(
 TARGET	
 	SpaceResource 
 SOURCES
