--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -6,27 +6,20 @@ include(GoogleTest.cmake)
 function(add_gtests)
     set(options)
     set(oneValue   TARGET)
-    set(multiValue INCLUDES SOURCES DEPENDS CONTAINERS)
+    set(multiValue INCLUDES SOURCES LINKS DEPENDS)
     cmake_parse_arguments(ARG "${options}" "${oneValue}" "${multiValue}" ${ARGN} )
-    add_executable (
-        ${ARG_TARGET} 
-        ${ARG_SOURCES}
-        
-    )
-    foreach(C ${ARG_CONTAINERS})
-        target_sources(${ARG_TARGET} PUBLIC $<TARGET_OBJECTS:${C}>)
-        message(STATUS "--------------------------------C=${C}")
+    add_executable (${ARG_TARGET} ${ARG_SOURCES})
+    # dependencies
+    foreach(L ${ARG_LINKS})
+        get_target_property(type ${L} TYPE)
+        if(${type} EQUAL OBJECT_LIBRARY)
+            target_sources(${ARG_TARGET} PUBLIC $<TARGET_OBJECTS:${L}>)
+        endif()
     endforeach()
-    target_include_directories(
-        ${ARG_TARGET}
-    PRIVATE
-        ${ARG_INCLUDES}
-    )
-    target_link_libraries(
-        ${ARG_TARGET}
-    PRIVATE
-       GTest::GTest GTest::Main ${ARG_DEPENDS}
-    )
+    target_include_directories(${ARG_TARGET}
+        PRIVATE ${ARG_INCLUDES})
+    target_link_libraries( ${ARG_TARGET}
+        PRIVATE GTest::GTest GTest::Main ${ARG_DEPENDS})
     add_test(NAME ${ARG_TARGET} COMMAND ${ARG_TARGET})
 endfunction()
 #
