--- a/Share/SConnectors/SEncoded/SMessage/CMakeLists.txt
+++ b/Share/SConnectors/SEncoded/SMessage/CMakeLists.txt
@@ -1,15 +1,17 @@
 cmake_minimum_required (VERSION 3.8)
 # folder for Kernel
 add_subdirectory(SKernel)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # ShareConnectorEncodedMessage interface
-# ---------------------------------------------------------
-create_interface(
-TARGET	
-	ShareConnectorEncodedMessage	 
-PUBLIC_LINKS
-	ShareConnectorEncodedMessageKernel
+# -----------------------------------------------------------------------------
+# interface library
+add_library(ShareConnectorEncodedMessage INTERFACE)
+# dependencies
+target_include_directories(ShareConnectorEncodedMessage
+INTERFACE
+	${CMAKE_CURRENT_LIST_DIR}
+	$<TARGET_PROPERTY:ShareConnectorEncodedMessageKernel,INTERFACE_INCLUDE_DIRECTORIES>
 )
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
