--- a/Share/SKernel/CMakeLists.txt
+++ b/Share/SKernel/CMakeLists.txt
@@ -1,25 +1,21 @@
 cmake_minimum_required (VERSION 3.8)
 # folder for core objects
 add_subdirectory(SCodec)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # ShareKernel target
-# ---------------------------------------------------------
-add_library(ShareKernel 
+# -----------------------------------------------------------------------------
+# object library
+add_library(ShareKernel OBJECT 
 	SConnector.cpp
 	SDocument.cpp
 	SModule.cpp
-	$<TARGET_OBJECTS:SpaceKernel>
 )
-# includes
-target_include_directories(ShareKernel 
-PUBLIC
-	.
+# dependencies
+target_include_directories(ShareKernel
+PUBLIC  
+	${CMAKE_CURRENT_LIST_DIR}
+	#$<TARGET_PROPERTY:ShareKernelCodec,INTERFACE_INCLUDE_DIRECTORIES>
 )
-# target dependencies
-target_link_libraries(ShareKernel 
-PUBLIC
-	ShareKernelCodec
-)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
