--- a/Space/SMonitors/CMakeLists.txt
+++ b/Space/SMonitors/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required (VERSION 3.8)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # SpaceMonitor interface
-# ---------------------------------------------------------
-create_interface(
-TARGET	
-	SpaceMonitor 
-INCLUDES
-	${CMAKE_CURRENT_LIST_DIR}
-LINKS
-	SpaceKernel
+# -----------------------------------------------------------------------------
+# interface library
+add_library(SpaceMonitor INTERFACE)
+# dependencies
+target_include_directories(SpaceMonitor
+INTERFACE
+	$<TARGET_PROPERTY:ShareKernel,INTERFACE_INCLUDE_DIRECTORIES>
 )
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
