--- a/Share/SConnectors/CMakeLists.txt
+++ b/Share/SConnectors/CMakeLists.txt
@@ -3,18 +3,18 @@ cmake_minimum_required (VERSION 3.8)
 add_subdirectory(SDecoded)
 # folder for Encoded
 add_subdirectory(SEncoded)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # ShareConnector collector
-# ---------------------------------------------------------
-create_interface(
-TARGET	
-	ShareConnector 
-INCLUDES
+# -----------------------------------------------------------------------------
+# interface library
+add_library(ShareConnector INTERFACE)
+# dependencies
+target_include_directories(ShareConnector
+INTERFACE
 	${CMAKE_CURRENT_LIST_DIR}
-LINKS
-	ShareConnectorDecoded
-	ShareConnectorEncoded
+	$<TARGET_PROPERTY:ShareConnectorDecoded,INTERFACE_INCLUDE_DIRECTORIES>
+	$<TARGET_PROPERTY:ShareConnectorEncoded,INTERFACE_INCLUDE_DIRECTORIES>
 )
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
