--- a/Share/SConnectors/SDecoded/SMessage/CMakeLists.txt
+++ b/Share/SConnectors/SDecoded/SMessage/CMakeLists.txt
@@ -3,19 +3,18 @@ cmake_minimum_required (VERSION 3.8)
 add_subdirectory(SKernel)
 # folder for Kernel
 add_subdirectory(STools)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # ShareConnectorDecodedMessage target
-# ---------------------------------------------------------
-create_interface(
-TARGET	
-	ShareConnectorDecodedMessage
-PUBLIC_INCLUDES
-	.
-PUBLIC_LINKS
-	ShareConnectorDecodedMessageKernel
-	ShareConnectorDecodedMessageTools
-	SpaceKernel
+# -----------------------------------------------------------------------------
+# interface library
+add_library(ShareConnectorDecodedMessage INTERFACE)
+# dependencies
+target_include_directories(ShareConnectorDecodedMessage
+INTERFACE
+	${CMAKE_CURRENT_LIST_DIR}
+	$<TARGET_PROPERTY:ShareConnectorDecodedMessageKernel,INTERFACE_INCLUDE_DIRECTORIES>
+	$<TARGET_PROPERTY:ShareConnectorDecodedMessageTools, INTERFACE_INCLUDE_DIRECTORIES>
 )
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
