--- a/Share/SConnectors/SEncoded/SMessage/SKernel/CMakeLists.txt
+++ b/Share/SConnectors/SEncoded/SMessage/SKernel/CMakeLists.txt
@@ -1,22 +1,22 @@
 cmake_minimum_required (VERSION 3.8)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # ShareConnectorEncodedMessageKernel package
-# ---------------------------------------------------------
-create_package(
-TARGET	
-	ShareConnectorEncodedMessageKernel	 
-SOURCES
+# -----------------------------------------------------------------------------
+# object library
+add_library(ShareConnectorEncodedMessageKernel OBJECT
 	SIDirConnector.cpp
 	SIIrcConnector.cpp
 	SIOIrcConnector.cpp
 	SODirConnector.cpp
 	SOIrcConnector.cpp
-PUBLIC_INCLUDES
-	${CMAKE_CURRENT_LIST_DIR}
-PUBLIC_LINKS
-	SpaceResource
-	ShareKernel
 )
-# ---------------------------------------------------------
+# dependencies
+target_include_directories(ShareConnectorEncodedMessageKernel
+PUBLIC 
+	${CMAKE_CURRENT_LIST_DIR}
+	#$<TARGET_PROPERTY:SpaceResource,INTERFACE_INCLUDE_DIRECTORIES>
+	#$<TARGET_PROPERTY:ShareKernel,  INTERFACE_INCLUDE_DIRECTORIES>
+)
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
