--- a/Share/SInterfaces/CMakeLists.txt
+++ b/Share/SInterfaces/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required (VERSION 3.8)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # ShareInterface target
-# ---------------------------------------------------------
-create_collector(
-TARGET	
-	ShareInterface 
-SOURCES
+# -----------------------------------------------------------------------------
+# object library
+add_library(ShareInterface OBJECT
 	SBufferShare.cpp
 	SMachine.cpp
-PUBLIC_INCLUDES
-	${CMAKE_CURRENT_LIST_DIR}
-PUBLIC_LINKS
-	ShareModule
-	ShareKernel
-	SpaceMonitor
 )
-# ---------------------------------------------------------
+# dependencies
+target_include_directories(ShareInterface
+PUBLIC 
+	${CMAKE_CURRENT_LIST_DIR}
+	#$<TARGET_PROPERTY:ShareModule, INTERFACE_INCLUDE_DIRECTORIES>
+	#$<TARGET_PROPERTY:ShareKernel, INTERFACE_INCLUDE_DIRECTORIES>
+	#$<TARGET_PROPERTY:SpaceMonitor,INTERFACE_INCLUDE_DIRECTORIES>
+)
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
