--- a/Space/SHelpers/CMakeLists.txt
+++ b/Space/SHelpers/CMakeLists.txt
@@ -1,19 +1,19 @@
 cmake_minimum_required (VERSION 3.8)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # SpaceHelper package
-# ---------------------------------------------------------
-create_package(
-TARGET	
-	SpaceHelper 
-SOURCES
+# -----------------------------------------------------------------------------
+# object library
+add_library(SpaceHelper OBJECT
 	SBase64.cpp
 	SHash.cpp
-PUBLIC_INCLUDES
-	${CMAKE_CURRENT_LIST_DIR}
-PUBLIC_LINKS
-	SpaceKernel
-	SpaceResource
 )
-# ---------------------------------------------------------
+# dependencies
+target_include_directories(SpaceHelper
+PUBLIC 
+	${CMAKE_CURRENT_LIST_DIR}
+	#$<TARGET_PROPERTY:ShareKernel,  INTERFACE_INCLUDE_DIRECTORIES>
+	#$<TARGET_PROPERTY:SpaceResource,INTERFACE_INCLUDE_DIRECTORIES>
+)
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
