--- a/Space/SKernel/CMakeLists.txt
+++ b/Space/SKernel/CMakeLists.txt
@@ -1,34 +1,32 @@
 cmake_minimum_required (VERSION 3.8)
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 # platform dependencies ${includes} and ${sources}
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
 if(true)
 	# linux folder for core objects
 	add_subdirectory(SLinux)
 endif()
-# ---------------------------------------------------------
-# SpaceKernel package
-# ---------------------------------------------------------
-create_package(
-TARGET	
-	SpaceKernel 
-SOURCES
-	${sources}
+# -----------------------------------------------------------------------------
+# SpaceKernel target
+# -----------------------------------------------------------------------------
+# object library
+add_library(SpaceKernel OBJECT 
+	${SOURCES}
 	SContainer.cpp
 	SAddress.cpp
 	SFrame.cpp
-PUBLIC_INCLUDES
-	${CMAKE_CURRENT_LIST_DIR}
-PRIVATE_INCLUDES
-	${includes}
-PUBLIC_LINKS
-	${links}
-	SpaceResource
-	SpaceMonitor
-	SpaceHelper
-PRIVATE_LINKS
-	SpaceMonitor
 )
-# ---------------------------------------------------------
+# dependencies
+target_include_directories(SpaceKernel
+PUBLIC  
+	${CMAKE_CURRENT_LIST_DIR}
+	#$<TARGET_PROPERTY:SpaceResource,INTERFACE_INCLUDE_DIRECTORIES>
+	#$<TARGET_PROPERTY:SpaceHelper  ,INTERFACE_INCLUDE_DIRECTORIES>
+	#$<TARGET_PROPERTY:${LINKS}     ,INTERFACE_INCLUDE_DIRECTORIES>
+PRIVATE 
+	${INCLUDES}
+	#$<TARGET_PROPERTY:SpaceMonitor ,INTERFACE_INCLUDE_DIRECTORIES>
+)
+# -----------------------------------------------------------------------------
 # end
-# ---------------------------------------------------------
+# -----------------------------------------------------------------------------
