--- a/Bindings/CMakeLists.txt
+++ b/Bindings/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 3.10)
 # subdirectories
 # ---------------------------------------------------------
 # folder for BufferShare
-add_subdirectory(BufferShare)
+#add_subdirectory(BufferShare)
 # folder for NetShare
 #add_subdirectory(NetShare)
 # ---------------------------------------------------------
