--- a/Share/SConnectors/SDecoded/SMessage/CMakeLists.txt
+++ b/Share/SConnectors/SDecoded/SMessage/CMakeLists.txt
@@ -6,9 +6,7 @@ add_subdirectory(STools)
 # ---------------------------------------------------------
 # ShareConnectorDecodedMessage target
 # ---------------------------------------------------------
-add_library(ShareConnectorDecodedMessage
-INTERFACE
-)
+add_library(ShareConnectorDecodedMessage INTERFACE)
 # includes
 target_include_directories(ShareConnectorDecodedMessage 
 INTERFACE
