--- a/Share/SConnectors/SDecoded/SStream/SKernel/CMakeLists.txt
+++ b/Share/SConnectors/SDecoded/SStream/SKernel/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # ShareConnectorDecodedStreamKernel target
 # ---------------------------------------------------------
-add_library(ShareConnectorDecodedStreamKernel 
-INTERFACE
-)
+add_library(ShareConnectorDecodedStreamKernel INTERFACE)
 # includes
 target_include_directories(ShareConnectorDecodedStreamKernel 
 INTERFACE
