--- a/Share/SConnectors/SEncoded/SStream/CMakeLists.txt
+++ b/Share/SConnectors/SEncoded/SStream/CMakeLists.txt
@@ -4,9 +4,7 @@ add_subdirectory(SKernel)
 # ---------------------------------------------------------
 # ShareConnectorEncodedStream target
 # ---------------------------------------------------------
-add_library(ShareConnectorEncodedStream 
-INTERFACE
-)
+add_library(ShareConnectorEncodedStream INTERFACE)
 # dependencies
 target_link_libraries(ShareConnectorEncodedStream
 INTERFACE 
