--- a/Share/SConnectors/SEncoded/SStream/SKernel/CMakeLists.txt
+++ b/Share/SConnectors/SEncoded/SStream/SKernel/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # ShareConnectorEncodedStreamKernel target
 # ---------------------------------------------------------
-add_library(ShareConnectorEncodedStreamKernel 
-INTERFACE
-)
+add_library(ShareConnectorEncodedStreamKernel INTERFACE)
 # includes
 target_include_directories(ShareConnectorEncodedStreamKernel 
 INTERFACE
