--- a/Share/SKernel/CMakeLists.txt
+++ b/Share/SKernel/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(SCodec)
 # ---------------------------------------------------------
 # ShareKernel target
 # ---------------------------------------------------------
-add_library(ShareKernel STATIC
+add_library(ShareKernel
 	SConnector.cpp
 	SDocument.cpp
 	SModule.cpp
