--- a/Space/SMonitors/CMakeLists.txt
+++ b/Space/SMonitors/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # SpaceMonitor target
 # ---------------------------------------------------------
-add_library(SpaceMonitor 
-INTERFACE
-)
+add_library(SpaceMonitor INTERFACE)
 # includes
 target_include_directories(SpaceMonitor 
 INTERFACE
