--- a/Share/SConnectors/SDecoded/SMessage/STools/CMakeLists.txt
+++ b/Share/SConnectors/SDecoded/SMessage/STools/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # ShareConnectorDecodedMessageTools target
 # ---------------------------------------------------------
-add_library(ShareConnectorDecodedMessageTools
-INTERFACE
-)
+add_library(ShareConnectorDecodedMessageTools INTERFACE)
 # includes
 target_include_directories(ShareConnectorDecodedMessageTools 
 INTERFACE
