--- a/Share/SFunctions/CMakeLists.txt
+++ b/Share/SFunctions/CMakeLists.txt
@@ -2,9 +2,7 @@ cmake_minimum_required (VERSION 3.8)
 # ---------------------------------------------------------
 # ShareFunction target
 # ---------------------------------------------------------
-add_library(ShareFunction 
-INTERFACE
-)
+add_library(ShareFunction INTERFACE)
 # includes
 target_include_directories(ShareFunction 
 INTERFACE
